code/include/physics/orxBody.nim

##  Orx - Portable Game Engine
##
##  Copyright (c) 2008-2020 Orx-Project
##
##  This software is provided 'as-is', without any express or implied
##  warranty. In no event will the authors be held liable for any damages
##  arising from the use of this software.
##
##  Permission is granted to anyone to use this software for any purpose,
##  including commercial applications, and to alter it and redistribute it
##  freely, subject to the following restrictions:
##
##     1. The origin of this software must not be misrepresented; you must not
##     claim that you wrote the original software. If you use this software
##     in a product, an acknowledgment in the product documentation would be
##     appreciated but is not required.
##
##     2. Altered source versions must be plainly marked as such, and must not be
##     misrepresented as being the original software.
##
##     3. This notice may not be removed or altered from any source
##     distribution.
##
## *
##  @file orxBody.h
##  @date 10/03/2008
##  @author iarwain@orx-project.org
##
##  @todo
##
## *
##  @addtogroup orxBody
##
##  Body Module
##  Allows to creates and handle physical bodies
##  They are used as container with associated properties
##  Bodies are used by objects
##  They thus can be referenced by objects as structures
##
##  @{
##

import
  orxInclude, obj/orxStructure, physics/orxPhysics

import
  base/orxType, math/orxVector, math/orxAABox

## * Internal Body structure
##

type orxBODY* = object
## * Internal Body part structure
##

type orxBODY_PART* = object
## * Internal Body joint structure
##

type orxBODY_JOINT* = object
## * Body module setup
##

proc orxBody_Setup*() {.cdecl, importc: "orxBody_Setup", dynlib: "liborx.so".}
## * Inits the Body module
##

proc orxBody_Init*(): orxSTATUS {.cdecl, importc: "orxBody_Init", dynlib: "liborx.so".}
## * Exits from the Body module
##

proc orxBody_Exit*() {.cdecl, importc: "orxBody_Exit", dynlib: "liborx.so".}
## * Creates an empty body
##  @param[in]   _pstOwner                     Body's owner used for collision callbacks (usually an orxOBJECT)
##  @param[in]   _pstBodyDef                   Body definition
##  @return      Created orxGRAPHIC / nil
##

proc orxBody_Create*(pstOwner: ptr orxSTRUCTURE; pstBodyDef: ptr orxBODY_DEF): ptr orxBODY {.
    cdecl, importc: "orxBody_Create", dynlib: "liborx.so".}
## * Creates a body from config
##  @param[in]   _pstOwner                     Body's owner used for collision callbacks (usually an orxOBJECT)
##  @param[in]   _zConfigID                    Body config ID
##  @return      Created orxGRAPHIC / nil
##

proc orxBody_CreateFromConfig*(pstOwner: ptr orxSTRUCTURE; zConfigID: cstring): ptr orxBODY {.
    cdecl, importc: "orxBody_CreateFromConfig", dynlib: "liborx.so".}
## * Deletes a body
##  @param[in]   _pstBody        Concerned body
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_Delete*(pstBody: ptr orxBODY): orxSTATUS {.cdecl,
    importc: "orxBody_Delete", dynlib: "liborx.so".}
## * Gets body config name
##  @param[in]   _pstBody        Concerned body
##  @return      orxSTRING / orxSTRING_EMPTY
##

proc orxBody_GetName*(pstBody: ptr orxBODY): cstring {.cdecl,
    importc: "orxBody_GetName", dynlib: "liborx.so".}
## * Tests flags against body definition ones
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _u32Flags       Flags to test
##  @return      orxTRUE / orxFALSE
##

proc orxBody_TestDefFlags*(pstBody: ptr orxBODY; u32Flags: orxU32): orxBOOL {.cdecl,
    importc: "orxBody_TestDefFlags", dynlib: "liborx.so".}
## * Tests all flags against body definition ones
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _u32Flags       Flags to test
##  @return      orxTRUE / orxFALSE
##

proc orxBody_TestAllDefFlags*(pstBody: ptr orxBODY; u32Flags: orxU32): orxBOOL {.cdecl,
    importc: "orxBody_TestAllDefFlags", dynlib: "liborx.so".}
## * Gets body definition flags
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _u32Mask        Mask to use for getting flags
##  @return      orxU32
##

proc orxBody_GetDefFlags*(pstBody: ptr orxBODY; u32Mask: orxU32): orxU32 {.cdecl,
    importc: "orxBody_GetDefFlags", dynlib: "liborx.so".}
## * Adds a part to body
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pstBodyPartDef Body part definition
##  @return      orxBODY_PART / nil
##

proc orxBody_AddPart*(pstBody: ptr orxBODY; pstBodyPartDef: ptr orxBODY_PART_DEF): ptr orxBODY_PART {.
    cdecl, importc: "orxBody_AddPart", dynlib: "liborx.so".}
## * Adds a part to body from config
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _zConfigID      Body part config ID
##  @return      orxBODY_PART / nil
##

proc orxBody_AddPartFromConfig*(pstBody: ptr orxBODY; zConfigID: cstring): ptr orxBODY_PART {.
    cdecl, importc: "orxBody_AddPartFromConfig", dynlib: "liborx.so".}
## * Removes a part using its config ID
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _zConfigID      Config ID of the part to remove
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_RemovePartFromConfig*(pstBody: ptr orxBODY; zConfigID: cstring): orxSTATUS {.
    cdecl, importc: "orxBody_RemovePartFromConfig", dynlib: "liborx.so".}
## * Gets next body part
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pstBodyPart    Current body part (nil to get the first one)
##  @return      orxBODY_PART / nil
##

proc orxBody_GetNextPart*(pstBody: ptr orxBODY; pstBodyPart: ptr orxBODY_PART): ptr orxBODY_PART {.
    cdecl, importc: "orxBody_GetNextPart", dynlib: "liborx.so".}
## * Gets a body part name
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      orxSTRING / nil
##

proc orxBody_GetPartName*(pstBodyPart: ptr orxBODY_PART): cstring {.cdecl,
    importc: "orxBody_GetPartName", dynlib: "liborx.so".}
## * Gets a body part definition (matching current part status)
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      orxBODY_PART_DEF / nil
##

proc orxBody_GetPartDef*(pstBodyPart: ptr orxBODY_PART): ptr orxBODY_PART_DEF {.cdecl,
    importc: "orxBody_GetPartDef", dynlib: "liborx.so".}
## * Gets a body part body (ie. owner)
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      orxBODY / nil
##

proc orxBody_GetPartBody*(pstBodyPart: ptr orxBODY_PART): ptr orxBODY {.cdecl,
    importc: "orxBody_GetPartBody", dynlib: "liborx.so".}
## * Removes a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_RemovePart*(pstBodyPart: ptr orxBODY_PART): orxSTATUS {.cdecl,
    importc: "orxBody_RemovePart", dynlib: "liborx.so".}
## * Adds a joint to link two bodies together
##  @param[in]   _pstSrcBody       Concerned source body
##  @param[in]   _pstDstBody       Concerned destination body
##  @param[in]   _pstBodyJointDef  Body joint definition
##  @return      orxBODY_JOINT / nil
##

proc orxBody_AddJoint*(pstSrcBody: ptr orxBODY; pstDstBody: ptr orxBODY;
                      pstBodyJointDef: ptr orxBODY_JOINT_DEF): ptr orxBODY_JOINT {.
    cdecl, importc: "orxBody_AddJoint", dynlib: "liborx.so".}
## * Adds a joint from config to link two bodies together
##  @param[in]   _pstSrcBody     Concerned source body
##  @param[in]   _pstDstBody     Concerned destination body
##  @param[in]   _zConfigID      Body joint config ID
##  @return      orxBODY_JOINT / nil
##

proc orxBody_AddJointFromConfig*(pstSrcBody: ptr orxBODY; pstDstBody: ptr orxBODY;
                                zConfigID: cstring): ptr orxBODY_JOINT {.cdecl,
    importc: "orxBody_AddJointFromConfig", dynlib: "liborx.so".}
## * Gets next body joint
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pstBodyJoint   Current body joint (nil to get the first one)
##  @return      orxBODY_JOINT / nil
##

proc orxBody_GetNextJoint*(pstBody: ptr orxBODY; pstBodyJoint: ptr orxBODY_JOINT): ptr orxBODY_JOINT {.
    cdecl, importc: "orxBody_GetNextJoint", dynlib: "liborx.so".}
## * Gets a body joint name
##  @param[in]   _pstBodyJoint   Concerned body joint
##  @return      orxSTRING / nil
##

proc orxBody_GetJointName*(pstBodyJoint: ptr orxBODY_JOINT): cstring {.cdecl,
    importc: "orxBody_GetJointName", dynlib: "liborx.so".}
## * Removes a body joint
##  @param[in]   _pstBodyJoint   Concerned body joint
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_RemoveJoint*(pstBodyJoint: ptr orxBODY_JOINT): orxSTATUS {.cdecl,
    importc: "orxBody_RemoveJoint", dynlib: "liborx.so".}
## * Sets a body position
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pvPosition     Position to set
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPosition*(pstBody: ptr orxBODY; pvPosition: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxBody_SetPosition", dynlib: "liborx.so".}
## * Sets a body rotation
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _fRotation      Rotation to set (radians)
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetRotation*(pstBody: ptr orxBODY; fRotation: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetRotation", dynlib: "liborx.so".}
## * Sets a body scale
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pvScale        Scale to set
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetScale*(pstBody: ptr orxBODY; pvScale: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxBody_SetScale", dynlib: "liborx.so".}
## * Sets a body speed
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pvSpeed        Speed to set
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetSpeed*(pstBody: ptr orxBODY; pvSpeed: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxBody_SetSpeed", dynlib: "liborx.so".}
## * Sets a body angular velocity
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _fVelocity      Angular velocity to set (radians/seconds)
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetAngularVelocity*(pstBody: ptr orxBODY; fVelocity: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetAngularVelocity", dynlib: "liborx.so".}
## * Sets a body custom gravity
##  @param[in]   _pstBody          Concerned body
##  @param[in]   _pvCustomGravity  Custom gravity to set / nil to remove it
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetCustomGravity*(pstBody: ptr orxBODY; pvCustomGravity: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxBody_SetCustomGravity", dynlib: "liborx.so".}
## * Sets a body fixed rotation
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _bFixed         Fixed / not fixed
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetFixedRotation*(pstBody: ptr orxBODY; bFixed: orxBOOL): orxSTATUS {.
    cdecl, importc: "orxBody_SetFixedRotation", dynlib: "liborx.so".}
## * Sets the dynamic property of a body
##  @param[in]   _pstBody        Concerned physical body
##  @param[in]   _bDynamic       Dynamic / Static (or Kinematic depending on the "allow moving" property)
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetDynamic*(pstBody: ptr orxBODY; bDynamic: orxBOOL): orxSTATUS {.cdecl,
    importc: "orxBody_SetDynamic", dynlib: "liborx.so".}
## * Sets the "allow moving" property of a body
##  @param[in]   _pstBody        Concerned physical body
##  @param[in]   _bAllowMoving   Only used for non-dynamic bodies, Kinematic / Static
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##
